Added base UnitTest class and created a unit test for Draw() method of Square.

--- a/tests/application-xunit/application-xunit.csproj
+++ b/tests/application-xunit/application-xunit.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <RootNamespace>application_xunit</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -23,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\application\application.csproj" />
     <ProjectReference Include="..\..\src\domain\domain.csproj" />
   </ItemGroup>
 
